# polybot-probability

./: .env.example  .gitignore  Dockerfile  README.md  STATUS.md  TODO.md  config.cloud.toml  config.example.toml  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run_bot.py
.github/workflows/: tests.yml
scripts/: audit_model.py  cohort_report.py  funnel_audit.py  healthcheck.py  paper_report.py  run.sh  smoke_test.py  start_cloud.sh  stop.sh  validate_connection.py
src/polybot/: __init__.py  config.py  db.py  models.py
src/polybot/analytics/: __init__.py  diagnostics.py  metrics.py  validation.py
src/polybot/calibration/: __init__.py  calibrator.py
src/polybot/clients/: __init__.py  auth.py  clob_rest.py  clob_ws.py  models.py  rate_limiter.py
src/polybot/execution_engine/: __init__.py  base.py  fill_model.py  paper.py
src/polybot/feature_builder/: __init__.py  builder.py
src/polybot/jobs/: __init__.py  cycle.py
src/polybot/market_discovery/: __init__.py  fetcher.py  filters.py
src/polybot/probability_model/: __init__.py  base.py  inefficiency_model.py  naive.py
src/polybot/reporting/: __init__.py  dashboard.py
src/polybot/risk_engine/: __init__.py  sizer.py
src/polybot/scoring/: __init__.py  scorer.py
src/polybot/signal_engine/: __init__.py  engine.py
src/polybot/strategy/: __init__.py  default.py
